fixing layout issues and doubleBorder issues

--- a/assets/less/layout.less
+++ b/assets/less/layout.less
@@ -69,14 +69,13 @@
 
 .content {    
   margin-bottom: @marginBottom;
-  margin-right: 1.0417%;    
+  margin-right: @marginRight;    
   display: block;
   width: 66.4375%;
   float: left;  
 
   .tabletPortrait({
-    min-width: 418px;
-    width: 58.6%;
+      width: 58.1%;
   });
 
   .mobileLandscape({
