--- a/assets/less/mixins.less
+++ b/assets/less/mixins.less
@@ -148,8 +148,8 @@
 // Double Border
 //////////////////////////////////////////////////////
 
-.doubleBorder (@background: #fff) {
-  border: @border;
+.doubleBorder (@border: #0B0B0A; @background: #fff) {
+  border: 1px solid @border;
   box-shadow: inset 0 0 0 2px @background, 
               inset 0 0 0 3px @border;
 }
